[package]
name = "wasm101"
version = "0.1.0"
authors = ["Evangelos Kolimitras <evangeloskolimitras@outlook.com>"]
edition = "2018"
repository = "https://github.com/EvangelosKolimitras/jrw"
description = "An 101 jrw approach"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"